public/stylesheets/main_responsive.css
/* latin */
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: local('Montserrat-Regular'), url('/fonts/montsterrat.woff2') format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  src: local('Montserrat-Bold'), url('/fonts/montsterrat_bold.woff2'
) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 300;
  src: local('Open Sans Light'), local('OpenSans-Light'), url('/fonts/open_sans_light.woff2') format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Open Sans'), local('OpenSans'), url('/fonts/open_sans.woff2') format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('/fonts/open_sans_bold.woff2') format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}


body *, html * {
letter-spacing: initial;
letter-spacing: "";
font-weight: 300;
font-family: "Open Sans", Helvetica Neue, Arial, sans-serif;
font-size:14.5px;
}
body,html {
  max-width: 100%;
  overflow-x: hidden;
}
.font-custom{
font-family: 'Montserrat';
}
#cookies{
  z-index:9999999999;
  background: black;
}
#map_canvas{
min-height:350px;
width:auto;
}
#banner{
height:200px;
clear: both;
float: none;
margin: 0 auto;
z-index:0;
}
#banner img{
width:100%;
clear: both;
}
a.gallery_link img{
box-shadow: 0 3px 6px lightgrey;
}
.article-title{
z-index:0;
letter-spacing:-1px;
font-size: 2.75em;
line-height: 2em;
}
p {
margin-top: 10px;
}
h1, h2, h3, h4, strong, b {
font-weight: 500; }
a{
color: #d32b59;
transition: all 0.15s linear;
}

small {
font-size: 12px; }
small * {
font-size: 12px; }

.footer{
  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAANklEQVQYV2NkIAzSGAmoSQPKz8KnCKwAZAguRXAFuBShKMCmCEMBuiKsCpAV4VQAU4RXAUgRAA8vCHD9SWoyAAAAAElFTkSuQmCC') ;
  background-color: #222;
}
.footer ul li {
margin-top: 6px; }

/*Utils */
.fullheight {
min-height: 100%; }

.font-smaller {
font-size: 11px; }

.pattern {
opacity: 0.25;
background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAI0lEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggXAAmiCIAEgQAAE4FBbECyZcAAAAASUVORK5CYII=");
}

/*Extra */
.article img {
float: left;
margin: 0 2% 1% 0;
width: 50%;
min-width: 200px;
}
.article-img{
  width:100%;
}
.top-menu {
  position:fixed;
  top:0;
  left:0;
  right:0;
  line-height:23px;
  background: #222;
  z-index:99999;
}
.top-menu-right *, .top-menu-right a{
  font-size: 12px;
}
.top-menu-social a {
margin-right: 10px;
font-size: 18px;
vertical-align: middle;
color: rgba(255, 255, 255, 0.5); }
.top-menu-social a:hover {
color: white;
}
.slogan{
z-index:0;
position:absolute;
bottom:30px;
}
.slogan h1{

  font-size:2.05em;
}
.slogan h2{
  font-size: 1.3em;
}
.play-home-video{
  position: absolute;
  left:0;
  right:0;
  top:42%;
  z-index:0;
font-size:100px;
opacity:.6;
}
.play-home-video:hover, .play-home-video:active{
opacity:1;
cursor: pointer;
}
.logo, .logo-scrolling{
  width:100%;
  min-width: 200px;
  max-width:210px;
}
.logo-scrolling {
  display:none;
}

body.not-home .logo-scrolling{
  display:inherit;
}
body.not-home .logo{
  display:none;
}
.header.scrolling .logo{
  display: none;
}
.header.scrolling .logo-scrolling {
  display: inherit;
}
.header{
  z-index:999998;
  min-width:100%;
  float: none;
  margin:0 auto;
  position:fixed;
  top:50px;
  height:85px;
  background: none;
}
.header.scrolling, body.not-home .header{
  top:39px;
}
.header.scrolling, body.not-home .header{
  box-shadow:0 2px 10px rgba(0,0,0, .1);
  background: white;
}
.header a{
  color:white;
  opacity:.9;
  transition:none;
  transition: opacity .3s linear;
}
.header.scrolling a, body.not-home .header a{
color:#333;
}
.header img{
  margin-top:10px;
}
.header .header-menu a,.header .header-menu a.active,.header .header-menu a:hover{
  line-height: 85px;
  opacity:.6;
  padding: 33px 1%;
  font-weight: 800;
  font-size: 14px;
  margin:0 0 0 0;
}
.header .header-menu a{
  opacity:.75;
}
.header .header-menu a:hover{
  opacity:1;
  background-color: none;
}
.header-menu.scrolling a:hover, body.not-home .header-menu a:hover {
  background-color: rgba(0,0,0, .07);
  opacity:.7;
 }
.header .header-menu.scrolling a:hover,.header .header-menu a.active{
  opacity:.8;
}

.header.scrolling .header-menu a:active,.header.scrolling .header-menu a.active{
  background: none;
  opacity:1;
  color:#d32859;
}
/*Backgrounds */
.bg-primary {
background-color: #d32859; }

.bg-primary-2 {
background-color: #f3366f; }

.bg-primary-3 {
background-color: #d4728f; }

.bg-primary-4 {
background-color: #a14669; }
.bg-black-more{
  background-color: #111;
}
/*Colors */
.color-primary {
color: #d32b59; }

/*Utils */
.separator1 {
min-height: 1px; }
/*Layout */
.line-max, .line-footer {
max-width: 1100px;
float: none;
margin: 0 auto; }
.line-footer{
  max-width: 1100px;
  width:96%;
}
.widget {
width: 31.33%;
margin: 0 1%;
float: left;
box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
overflow: hidden;
}
.widget .btn{
  font-size: 14px;
  min-width: 120px;
}
.widget-pic{
  height:200px;
}
.widget-title{
  font-size:18px;
  margin-bottom:10px;
}
.widget-pic-title{
  color:white;
  font-size:20px;
  position: relative;
  top:-180px;
  width:95%;
  margin:0 auto;
  float:none;
}
.widget-desc{
  overflow:hidden;
  min-height: 94px;
  height:94px;
}
.widget:hover {
box-shadow: 0 0px 4px rgba(0, 0, 0, 0.2); }
.img-media{
  max-width: 96%;
  padding:2%;
  background: white;
  box-shadow:0 1px 4px rgba(0,0,0, .2);
}
/*IDs */
#menuMobile {
  z-index:999999;
background: rgba(0, 0, 0, 0.85); }
#menuMobile a {
line-height: 30px;
font-size: 14.5px;
font-weight: 500;
}
#menuMobile a.active{
  font-style:italic;
  background: black;
}
#btnMenu {
  position: fixed;
  z-index:99999999;
transition-duration: 0.2s;
line-height: 38px;
width: 40px;
font-size: 20px; }
#btnMenu.rotate {
transform: rotate(180deg); }
#btnMenu.rotate i{
  bottom:-5px;
}
/*Responsive */
/*tablet */
@media screen and (max-width: 800px) {
.center-content-tablet {
text-align: center;
}

.widget {
width: 100%;
margin: 0 0 0 0;
margin-bottom: 20px; }

.line-full-tablet {
width: 100%;
padding: 0 0 0 0;
float: none; } }
.article #photos {
box-sizing: border-box;
margin-top: 20px;
min-height:400px;
}
.article #photos img {
margin: 1%;
float: left;
width: 14.5%;
min-width: 50px; }

.flickr_button {
display: none; }
.gallery_loading{
  line-height: 200px;
  min-height:415px;
  font-size: 18px;
}
.f_gallery{
  max-height:415px;
  overflow-y:hidden;
}
.not-home #slide {
  min-height:80px;
  max-height: 80px;
  overflow: hidden;
  background:white;
}
.not-home{
  background: white;
}
.widget h3 {
  white-space: nowrap;
  overflow: hidden;
}
/*slider*/
.owl-carousel{
  height:auto;
  min-height:0;
  position: relative;
  background: white;
  top:-50px;
  max-height:100vh;
  overflow-y:hidden;
}
.owl-prev,.owl-next{
  text-align: center;
  background:rgba(0,0,0, .35);
  width:50px;
  height:50px;
  line-height: 52px;
  border-radius:25px;
  font-size: 20px;
  position:absolute;
  z-index:99;
  top:55%;
  cursor:pointer;
}
.owl-prev:hover,.owl-next:hover{
opacity:.8;
}
.owl-prev:active,.owl-next:active{
  background: rgba(0,0,0, .6);
}
.owl-prev{
    left:2%;
    text-indent:-2px;
}
.owl-next{
  right:2%;
  text-indent:2px;
}
.box {
  box-shadow:0 1px 4px rgba(0,0,0, .2);
  border-bottom:1px solid rgba(0,0,0, .1);
}
.btn{

  border-radius:2px;
}
.fixed-height {
  height: 450px;
  background: #FFF;
}
.grid-item {
  margin-bottom: 2%;
}
@media screen and (max-width: 800px) {
  .grid-item {
    margin-bottom: 3%;
  }

  body{
    font-size:13.5px;
  }
  .article-title{
    font-size:30px;
    line-height: 50px;
  }
}
.corsi-nav a {
  width: auto;
  display: inline-block;
  margin-bottom: 5px;
}

